--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,8 @@
       "no-nested-ternary": 0,
       "import/prefer-default-export": 0,
       "no-use-before-define": 0,
-      "no-unused-vars": 0
+      "no-unused-vars": 0,
+      "comma-dangle": 0
     },
     "globals": {
       "__DEV__": true,
