--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ios": "expo start --ios",
     "eject": "expo eject",
     "ios:beta": "fastlane ios beta",
-    "android:beta": "fastlane android beta"
+    "android:beta": "fastlane android beta",
+    "lint": "eslint *.js **/*.js"
   },
   "dependencies": {
     "@babel/helper-plugin-utils": "^7.0.0",
@@ -57,10 +58,12 @@
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-expo": "^8.0.0",
     "babel-preset-react-native": "^4.0.1",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-akveo-react": "^1.0.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
