--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,10 @@
       "import/prefer-default-export": 0,
       "object-curly-newline": 0,
       "react/forbid-prop-types" : 0,
+      "import/extensions": 0,
+      "import/no-unresolved": 0,
+      "import/order": 0,
+      "react/sort-comp": 0,
       "react/static-property-placement": [
         "error",
         "static public field"
