--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
       "import/no-unresolved": 0,
       "import/order": 0,
       "react/sort-comp": 0,
+      "react/destructuring-assignment": 0,
       "react/static-property-placement": [
         "error",
         "static public field"
